<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/addPage"
>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
                android:id="@+id/newNoteTitle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:autofillHints="Title"
                android:hint="@string/title"
        />
        <Switch
                android:id="@+id/importantSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>
    </LinearLayout>
    <EditText
            android:id="@+id/newNoteContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:autofillHints="Content"
            android:hint="@string/content"
    />
    <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/create"
    />

</LinearLayout>